kube/apps/jdownloader2/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jdownloader2
spec:
  selector:
    app.kubernetes.io/name: jdownloader2
  ports:
    - name: http # the web UI (noVNC)
      port: 5800
